src/objects/TASKRAY__Project__c.object
<CustomObject>
    <description>This is the primary TaskRay object for projects.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To tie project to account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingIds__c</fullName>
        <label>Share to Chatter Groups (ID)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingNames__c</fullName>
        <label>Share to Chatter Groups (Name)</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ProjectColor__c</fullName>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_End__c</fullName>
        <description>Used to track the date of when the project is estimated (scheduled) to be completed. This date will update accordingly to accommodate any scheduling changes.</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Child Projects</relationshipLabel>
        <relationshipName>Project_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Start__c</fullName>
        <description>Used to track the date of when the project is scheduled to start.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TextColor__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>trProjectAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBillableHours__c</fullName>
        <label>Actual Billable Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the project is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the project was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the project. Calculated as the difference between the project Start Date and the project Actual Completion Date.</description>
        <formula>IF(
    (TASKRAY__trActualCompletionDate__c - TASKRAY__Project_Start__c + 1) &gt; 0,
    TASKRAY__trActualCompletionDate__c - TASKRAY__Project_Start__c + 1,
    null
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that it took to complete the project.</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualHours__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAddFormsGuestUserToProjectTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A behind-the-scenes field that controls the addition/removal of the TaskRay Forms Public Site Guest User to the Project Team.</description>
        <inlineHelpText>A behind-the-scenes field that controls the addition/removal of the TaskRay Forms Public Site Guest User to the Project Team.</inlineHelpText>
        <label>Add Forms Guest User to Project Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the project</description>
        <label>Viewable in Public Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines project’s default business hour availability. Tasks will not be scheduled for any days designated as non-working days.</description>
        <label>Project Schedule</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCloneOperationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Project has been successfully cloned from a template. This field is automatically set to true when the clone operation is complete.</description>
        <inlineHelpText>Indicates a Project has been successfully cloned from a template. This field is automatically set to true when the clone operation is complete.</inlineHelpText>
        <label>Clone Operation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a project is complete. Works in conjunction with the Actual Completion Date field to determine the duration of the project.</description>
        <inlineHelpText>Indicates whether a project is complete.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Progress</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCurrentOnHoldDuration__c</fullName>
        <formula>IF(TASKRAY__trOnHold__c = true &amp;&amp; NOT(ISBLANK(TASKRAY__trOnHoldDate__c)) &amp;&amp; (TODAY() - TASKRAY__trOnHoldDate__c + 1) &gt; 0, (TODAY() - TASKRAY__trOnHoldDate__c + 1), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current On-Hold Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomerOnboardingScore__c</fullName>
        <description>A calculated customer onboarding score based on a project&apos;s Initial Projected Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</description>
        <inlineHelpText>A calculated customer onboarding score based on a project&apos;s Initial Projected Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</inlineHelpText>
        <label>Customer Onboarding Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Project is a draft template.</description>
        <inlineHelpText>This field is controlled behind-the-scenes and determines if a Project is a draft template.</inlineHelpText>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedBillableHours__c</fullName>
        <label>Estimated Billable Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedDuration__c</fullName>
        <description>Used to track the estimated number of days that it should take to complete the project as scheduled. Calculated as the difference between the project Start Date and the project Estimated End Date.</description>
        <formula>IF( 
(TASKRAY__Project_End__c - TASKRAY__Project_Start__c + 1) &gt; 0, 
TASKRAY__Project_End__c - TASKRAY__Project_Start__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated number of days that it should take to complete the project as scheduled.</inlineHelpText>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExtSharingNotes__c</fullName>
        <description>Standard and Premium editions only. Used in conjunction with the public dashboard feature.</description>
        <inlineHelpText>Use this field to communicate to your external stakeholders on the public dashboard site.</inlineHelpText>
        <label>Public Dashboard Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalFeedback__c</fullName>
        <description>External feedback about a customer&apos;s onboarding experience.</description>
        <inlineHelpText>Use this field to capture external feedback about a customer&apos;s onboarding experience.</inlineHelpText>
        <label>External Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalLink__c</fullName>
        <description>This field will be populated with a link to a public site when the &quot;Viewable in Public Dashboard&quot; checkbox is checked.</description>
        <formula>IF( TASKRAY__trAvailableExternal__c ,
      HYPERLINK(
        $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trPublicSiteURL__c
        + &apos;?pid=&apos; + Id
        + &apos;&amp;fullScreen=true&amp;view=planning&apos;,
        $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trPublicSiteURL__c
        + &apos;?pid=&apos; + Id
        + &apos;&amp;fullScreen=true&amp;view=planning&apos;
      ),
      null)</formula>
        <label>Public Dashboard Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalSentiment__c</fullName>
        <description>The external sentiment of a customer onboarding project based on a satisfaction score.</description>
        <inlineHelpText>Use this field to capture the external sentiment of a customer onboarding project.</inlineHelpText>
        <label>External Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Very Unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Very Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trGenerateOnboardingFeedbackForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generates a link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</description>
        <inlineHelpText>Use this to generate the Onboarding Feedback Form Link which can be shared with a customer to capture their external feedback and sentiment.</inlineHelpText>
        <label>Generate Onboarding Feedback Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedCompletionDate__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the date of when the project is initially projected to be completed. This date will update accordingly to accommodate any scheduling changes up until the project start date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the date of when the project was initially projected to be completed.</inlineHelpText>
        <label>Initial Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedDuration__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the number of days between the project Start Date and the project Initial Projected Completion Date.</description>
        <formula>IF(
    (TASKRAY__trInitialProjectedCompletionDate__c - TASKRAY__Project_Start__c + 1) &gt; 0,
    TASKRAY__trInitialProjectedCompletionDate__c - TASKRAY__Project_Start__c + 1,
    null
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Behind the scenes” field. This is the duration of the project as it was initially projected.</inlineHelpText>
        <label>Initial Projected Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInternalSentiment__c</fullName>
        <description>The internal sentiment of a customer onboarding project based on a satisfaction score.</description>
        <inlineHelpText>Use this field to capture the internal sentiment of a customer onboarding project.</inlineHelpText>
        <label>Internal Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Very Unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Very Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trNickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldCount__c</fullName>
        <label>Number of Times On-Hold</label>
        <summaryForeignKey>TASKRAY__trOnHoldHistory__c.TASKRAY__trProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldDate__c</fullName>
        <description>The most recent date that a project has been marked as on hold.</description>
        <inlineHelpText>The most recent date that a project has been marked as on hold.</inlineHelpText>
        <label>On-Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a project has been marked as on hold.</description>
        <inlineHelpText>Indicates that a project has been marked as on hold.</inlineHelpText>
        <label>On-Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingFeedbackFormLink__c</fullName>
        <description>A link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</description>
        <formula>IF(TASKRAY__trGenerateOnboardingFeedbackForm__c, 

HYPERLINK($Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trFormsPublicSiteURL__c+&apos;?projectId=&apos;+ Id +  IF(  ISBLANK( $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trOnboardingFeedbackFlow__c) , &apos;&apos;, &apos;&amp;flowname=&apos;+$Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trOnboardingFeedbackFlow__c), 

&quot;Link to Form&quot;) 

,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</inlineHelpText>
        <label>Onboarding Feedback Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingSummaryNotes__c</fullName>
        <description>Key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</description>
        <inlineHelpText>Use this field to store key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</inlineHelpText>
        <label>Onboarding Summary Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>trProjectOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPendingInterviewCount__c</fullName>
        <label>Pending Interview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPreviousOnHoldDuration__c</fullName>
        <label>Previous On-Hold Duration (days)</label>
        <summarizedField>TASKRAY__trOnHoldHistory__c.TASKRAY__trOnHoldDuration__c</summarizedField>
        <summaryForeignKey>TASKRAY__trOnHoldHistory__c.TASKRAY__trProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPrimaryOnboardingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the primary customer contact for onboarding.</description>
        <inlineHelpText>Use this field to identify the primary customer contact for onboarding.</inlineHelpText>
        <label>Primary Onboarding Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Onboarding Contact (TaskRay Projects)</relationshipLabel>
        <relationshipName>trPrimaryOnboardingProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStatus__c</fullName>
        <description>Used to set the status of a project.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4bca81</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>ffb75d</fullName>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>d4504c</fullName>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskWeightingType__c</fullName>
        <description>Premium-Only feature.</description>
        <inlineHelpText>Determines the task weighting type of this Project&apos;s Tasks. Will override the org-wide setting for task weighting, if populated.</inlineHelpText>
        <label>Task Weighting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Time-Based</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateDescription__c</fullName>
        <description>A description of a Template Project.</description>
        <inlineHelpText>Use this field to provide a description of a Template Project.</inlineHelpText>
        <label>Template Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateLibrarySource__c</fullName>
        <label>TaskRay Template Library Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Cloned Projects</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalOnHoldDuration__c</fullName>
        <formula>TASKRAY__trCurrentOnHoldDuration__c + TASKRAY__trPreviousOnHoldDuration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total On-Hold Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TaskRay Project</label>
    <listViews>
        <fullName>TASKRAY__AllProjects</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__Archived_and_Templates</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>TASKRAY__trTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Archived and Templates</label>
    </listViews>
    <listViews>
        <fullName>trUnassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>TaskRay Unassigned</label>
        <queue>trUnassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Added to TaskRay Project Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>TASKRAY__Completing_Project_Restricted_to_Owner</fullName>
        <active>false</active>
        <errorConditionFormula>AND($User.Id !=  OwnerId ,ISCHANGED(TASKRAY__trCompleted__c),TASKRAY__trCompleted__c)</errorConditionFormula>
        <errorMessage>Only the Project Owner can mark the project as completed. Contact your system administrator if you would like access to this functionality.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Editing_Score_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from modifying the Customer Onboarding Score.</description>
        <errorConditionFormula>AND( 
ISCHANGED( TASKRAY__trCustomerOnboardingScore__c ), 
NOT(ISBLANK(PRIORVALUE(TASKRAY__trCustomerOnboardingScore__c))), 
$User.Id != OwnerId 
)</errorConditionFormula>
        <errorMessage>Only the Project Owner can edit the Customer Onboarding Score. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__External_Sharing_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from making a project available for external users</description>
        <errorConditionFormula>ISCHANGED( TASKRAY__trAvailableExternal__c ) &amp;&amp;
TASKRAY__trAvailableExternal__c == true &amp;&amp;
$User.Id !=  OwnerId</errorConditionFormula>
        <errorMessage>Only the Project Owner can make the project available for Public Dashboard. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Feedback_Form_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from making a project available for external onboarding feedback.</description>
        <errorConditionFormula>AND(ISCHANGED( TASKRAY__trGenerateOnboardingFeedbackForm__c ) ,TASKRAY__trGenerateOnboardingFeedbackForm__c == true , $User.Id != OwnerId)</errorConditionFormula>
        <errorMessage>Only the Project Owner can make the project available for external onboarding feedback. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__No_spaces_in_Nickname</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( TASKRAY__trNickname__c  ,&quot;.*\\s+.*&quot;)</errorConditionFormula>
        <errorMessage>Project Nicknames cannot have spaces</errorMessage>
    </validationRules>
</CustomObject>